# mu_player

./: .gitignore  README.md  pyproject.toml
designs/: favicon.paint  logo.paint  player.excalidraw
src/mu_player/: __init__.py  config.py  connect.py  player.py  preferences.py  song.py
src/mu_player/static/: style.css
src/mu_player/templates/: base.html  connect.html  player.html  preferences.html
tests/: test_muplayer.py
