[project]
name = "mu_player"
description = "A music player with a flask web interface (so you can control your music from other devices!)"
version = "1.0.0"
readme = "README.md"
authors = [
	{ name = "Paya Maroufi", email = "h2o.Drop2010+hackclub@gmail.com"}
]
requires-python = ">=3.10,<=3.15"

classifiers = [
	"Development Status :: 4 - Beta",
	"Framework :: Flask",
	"Intended Audience :: End Users/Desktop",
	"Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: 3.15",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
flask = "^3.1.3"
eyed3 = "^0.9.9"
pygame-ce = "^2.5.7"
